--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "https://rezakahkeshani.ir"
 author: 
   name: "Reza Kahkeshani"
   email: "kahkeshanireza@kashanu.ac.ir"
-theme: minimal-mistakes-jekyll
+remote_theme: mmistakes/minimal-mistakes@4.27.0
 plugins:
   - jekyll-remote-theme
   - jekyll-paginate
