--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ url: "https://rezakahkeshani.ir"
 author: 
   name: "Reza Kahkeshani"
   email: "kahkeshanireza@kashanu.ac.ir"
-remote_theme: mmistakes/minimal-mistakes@3.3.0
+# remote_theme: mmistakes/minimal-mistakes@3.3.0
+remote_theme: mmistakes/minimal-mistakes
 plugins:
   - jekyll-remote-theme
   - jekyll-paginate
